--- a/index.html
+++ b/index.html
@@ -48,8 +48,9 @@
     <br><br>
     <hr>
     <br><br>
+    <div class="container">
+    <img class="foto4" src="img/map.png" alt="foto4">
     <p>
-        <img class="foto4" src="img/map.png" alt="foto4">
     There were various indigenous ethnicities in 
 Uruguay: Guenoas, Yaros, Minuanes, Guaraníes 
 and Charrúas. This last group moved from our 
@@ -61,6 +62,7 @@ encounter with Juan Díaz de Solís in 1516.
 <br><br>
 <hr>
 <br><br>
+<img class="foto5" src="img/casa.2.jpg" alt="foto5">
 <p>
     
 Although the Charrúas were smaller in quantity, 
@@ -70,13 +72,13 @@ being distant from the rest of society, more
 independent and wild, meaning they were more 
 skillful and brave in battle. They were also nomads, 
 they hunted to eat and lived in "tolderías".
-<img class="foto5" src="img/casa.2.jpg" alt="foto5">
 </p>
+
 <br>
 <hr>
 <br>
+<img class="foto6" src="img/garra.jpg" alt="foto6">
 <p>
-    <img class="foto6" src="img/garra.jpg" alt="foto6">
 The Charrúas lived in a continuous struggle
 against the colonizers for approximately 260 
 years, and, after many battles, their people 
@@ -110,6 +112,7 @@ stories. They want to be recognized as
 Uruguayans but also as indigenous of a new 
 century.
 </p>
+</div>
 <br>
 <hr>
 <br><br><br>
