--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 <link href="https://fonts.googleapis.com/css2?family=Arvo:ital,wght@0,400;0,700;1,400;1,700&family=Caveat&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="index.css">
 <link rel="stylesheet" href="https://colorhunt.co/palette/734444c37857eeedbe99b27f">
+<link rel="shortcut icon" href="img/sol.png" />
 
 <body>
     <br><br>
